# grpc-calculator

./: Cargo.toml  Readme.md  build.rs  notes.txt
frontend/: package-lock.json  package.json  vite.config.js
frontend/protos/: calculator.proto
frontend/src/: App.css  App.jsx  index.css
proto/: calculator.proto
src/: client.rs  main.rs
