[package]
name = "grpc-calculator"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.14"
tokio = { version = "1", features = ["full"] }
prost = "0.14"
tonic-reflection = "0.14"
tonic-web = "0.14"
tower-http = { version = "0.6", features = ["cors"] }
tonic-prost = "0.14.5"
http = "1.4.0"

[build-dependencies]
tonic-prost-build = "0.14"


[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"
